--- a/index.html
+++ b/index.html
@@ -1,25 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
     <header>
-
+        <h1>Calculator</h1>
     </header>
 
 
     <main>
-        
-    </main>
+        <div id="calculator">
+            <p class="textAlign-right" id="display">0123456789</p>
+            <div>
+            <button id="seven">7</button>
+            <button id="eight">8</button>
+            <button id="nine">9</button>
+            <button id="plus">+</button>
+        </div>
+        <div>
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six">6</button>
+            <button id="minus">-</button>
+        </div>
+        <div>
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
+            <button id="multiply">*</button>
+        </div>
+        <div>
+            <button id="equals">=</button>
+            <button id="zero">0</button>
+            <button id="clear">C</button>
+            <button id="divide">/</button>
+        </div>
+    </div>
 
+    </main>
+    
 
     <footer>
-
+        made by c8in4
     </footer>
 </body>
+
 </html>
