Rewrite calculation logics

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main>
         <div id="calculator">
-            <p class="textAlign-right" id="display"></p>
+            <p class="textAlign-right" id="display">0</p>
             <div>
                 <button id="seven">7</button>
                 <button id="eight">8</button>
