--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
         <div id="calculator">
             <p class="textAlign-right" id="display">0</p>
             <div>
+                <button id="clear">C</button>
+                <button id="">$</button>
+                <button id="">$</button>
+                <button id="divide">/</button>
+            </div>
+            <div>
                 <button id="seven">7</button>
                 <button id="eight">8</button>
                 <button id="nine">9</button>
-                <button id="plus">+</button>
+                <button id="multiply">*</button>
             </div>
             <div>
                 <button id="four">4</button>
@@ -34,13 +40,13 @@
                 <button id="one">1</button>
                 <button id="two">2</button>
                 <button id="three">3</button>
-                <button id="multiply">*</button>
+                <button id="plus">+</button>
             </div>
             <div>
-                <button id="equals">=</button>
+                <button id="">$</button>
                 <button id="zero">0</button>
-                <button id="clear">C</button>
-                <button id="divide">/</button>
+                <button id="dot">.</button>
+                <button id="equals">=</button>
             </div>
         </div>
 
