Add and style calculator layout and buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <main>
         <div id="calculator">
-
+            <div id="calculatorDisplay">012456789</div>
+            <div id="calculatorButtons"></div>
         </div>
 
     </main>
