--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <div id="calculator">
-            <div id="calculatorDisplay">012456789</div>
+            <div id="calculatorDisplay"></div>
             <div id="calculatorButtons"></div>
         </div>
 
