Add solar panel to calculator

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 
     <main>
         <div id="calculator">
+            <div id="calculatorHeader">
+                <h2>CALCIO</h2>
+                <div id="solar">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
             <div id="calculatorDisplay"></div>
             <div id="calculatorButtons"></div>
         </div>
